# genomecrispr

./: LICENSE  Makefile  README.md  cdks.txt  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  query.rst
docs/source/user/: index.rst
genomecrispr/query/: extract.py  fetch.py
genomecrispr/query/test/: test_fetch.py
genomecrispr/scripts/: screen.py
