[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genomecrispr"
version = "0.0.0"
description = "GenomeCRISPR library"
requires-python = ">= 3.10"
license = {file = "LICENSE"}
authors = [{name = "Nourdine Bah"},]
maintainers = [{name = "Nourdine Bah", email = "nourdinebah@gmail.com"},]
readme = {file = "README.md", content-type="text/markdown"}
dependencies = ["click >= 8.1.3", "urllib3 >= 1.26.12", "pandas >= 1.5.3"]
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.19",
]

[project.urls]
Home-page = "https://github.com/bahnk/genomecrispr"

